# mkgraph

./: README.md  pyproject.toml  test-input.md
.github/workflows/: test.yml
mkgraph/: __init__.py  cli.py  config.py  export.py  llm.py  processor.py  state.py  templates.py
mkgraph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
output/Organizations/: Acme Corp.md  TechStart.md
output/People/: Jane Doe.md  John Smith.md
output/Topics/: Project Phoenix.md
test-batch/: meeting1.md  meeting2.md
test-batch-output/Organizations/: Acme Corp.md  TechStart.md
test-batch-output/People/: Jane Doe.md  John Smith.md
test-batch-output/Topics/: Project Phoenix.md  partnership.md
tests/: __init__.py
tests/integration/: test_integration.py
tests/unit/: test_config.py  test_llm.py  test_processor.py  test_state.py  test_templates.py
